--- a/specialties.html
+++ b/specialties.html
@@ -71,6 +71,7 @@
 </head>
 
 <body>
+
     <!-- Header -->
     <header id="header">
 
@@ -151,35 +152,35 @@
     </header>
 
     <!-- Hero -->
+
     <section id="slider" class="hero p-0 odd">
-        <div class="swiper-container no-slider slider-h-85">
+        <div class="swiper-container no-slider slider-h-75">
 
             <div class="swiper-wrapper">
 
                 <!-- Item 1 -->
                 <div class="swiper-slide slide-center" id="1">
                     <section class="pb-0">
-                        <img data-aos="zoom-out-up" data-aos-delay="800"
-                            src="/assets/images/banner2_princial_servicios.png" class="hero-image-services"
-                            alt="Hero Image">
-                            <figure class="h-20"></figure>
-                        <div class="slide-content row mb-5 pt-md-5" data-mask-768="70">
+                        <img data-aos="zoom-out-up" data-aos-delay="800" src="/assets/images/19.png"
+                            class="hero-image-specialties" alt="Hero Image">
+                        <div class="slide-content row mb-5" data-mask-768="70">
                             <div class="col-12 inner d-flex">
-                                <div class="col-12 col-md-9 center align-self-center text-md-left w-100">
-                                    <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title services-h1">
-                                        <span class="title-4">Digital marketing expertise, </span> <br>
-                                        <span class="title-7">tailored to your individual needs and</span> <br>
-                                        <span class="title-6">goals for growth.</span>
+                                <div class="center align-self-center text-md-left">
+                                    <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title specialties-h1">
+                                        <span class="title-1">Specialties </span> <br>
+                                        <span class="title-5">that spearhead innovative</span> <br>
+                                        <span class="title-3">scale-up.</span>
                                     </h1>
-                                    <p data-aos="zoom-out-up" data-aos-delay="600" class="p-about pb-5 pb-md-0 mb-5 px-0 col-12 col-md-6">A full
-                                        suite of marketing services executed with extensive expertise ensures results
-                                        that meet ? or exceed ? your expectations. </p>
+                                    <p data-aos="zoom-out-up" data-aos-delay="600"
+                                        class="p-about pb-0 mb-md-0 mb-5 col-12 col-md-6 px-0">Our
+                                        years of experience with health tech and educational organizations in Spain,
+                                        Latin America, and the US provide us with deeper insights into these markets.
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <img data-aos="zoom-out-up" data-aos-delay="800"
-                            src="/assets/images/banner_princial_servicios.png" class="hero-image-services-2"
-                            alt="Hero Image">
+                        <img data-aos="zoom-out-up" data-aos-delay="800" src="/assets/images/18.png"
+                            class="hero-image-specialties-2" alt="Hero Image">
                     </section>
 
                 </div>
@@ -187,194 +188,68 @@
             </div>
         </div>
     </section>
+    <!-- Hero -->
 
 
-
-    <iframe src="/test.html" width="100%" height="1200px" class="iframe-services"></iframe>
-
+    <!-- Specialties -->
     <section class="section-5 p-0">
-        <div class="col-12 d-flex flex-column flex-md-row p-0">
-            <div class="col-12 col-md-6 p-0 ">
-                <img src="http://5.161.71.57/imgfiles/images/Block_30_B.jpg" class="w-100" alt="">
+        <div class="col-12 d-flex flex-column flex-md-row  p-0">
+            <div class="col-12 col-md-6 p-0">
+                <img src="/assets/images/Grupo 28000.jpg" alt="">
             </div>
             <div class="col-12 col-md-6 content-services-bot">
-                <h2 class="h2-services">Scale With Flexibility</h2>
-                <p class="p-services">Need the experience of a Chief Marketing Officer? That's no problem. Want to design and launch a
-                    360-degree digital marketing strategy and growth plan? We've got you covered. Choose individual
-                    services as needed, from fee-based projects to monthly programs.</p>
-                <a href="#contact" data-aos="zoom-out-up" data-aos-delay="200"
-                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
-                    How</a>
+                <h2 class="h2-services">Higher Education</h2>
+                <p class="p-services">We have extensive experience partnering with higher education institutions to
+                    support their growth and business objectives. Whether you're seeking to recruit more qualified
+                    applicants, boost development campaigns, or maintain close contact with alumni, we can help.
+                    <br><br> Our digital journey mapping services provide a deeper understanding of your audiences, what
+                    they care about, and optimal communication styles. Customized social media, paid advertising, and
+                    email campaigns reach qualified individuals across channels - helping clients significantly boost
+                    student awareness and enrollments.</p>
             </div>
         </div>
-        <div class="col-12 d-flex flex-column-reverse flex-md-row p-0">
+        <div class="col-12 d-flex flex-column flex-md-row flex-column-reverse p-0">
+            <div class="col-12 col-md-6 content-services-bot">
+                <h2 class="h2-services">Healthcare</h2>
+                <p class="p-services">We specialize in scaling traditional healthcare businesses based on the newest
+                    technology. From clinics and hospitals to health-tech focused startups, our goal is to execute
+                    digital marketing plans that reposition these institutions in a moving market – growing
+                    on-and-offline awareness and launching bold business innovation to accommodate and resonate with a
+                    new generation.</p>
+            </div>
+            <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Grupo 28001.jpg" alt=""></div>
+        </div>
+        <div class="col-12 d-flex flex-column flex-md-row p-0">
+            <div class="col-12 col-md-6 p-0">
+                <img src="/assets/images/Grupo 28002.jpg" alt="">
+            </div>
+            <div class="col-12 col-md-6 content-services-bot">
+                <h2 class="h2-services mt-0">Agency Partners</h2>
+                <p class="p-services">Digital marketing services are an essential part of many agency offerings, but
+                    certain types of projects might not be in your wheelhouse. Learning and scaling technology in-house
+                    for continuous delivery and monitoring can be costly. Retaining experienced creative talent is
+                    costly and challenging in today's market. Turn to us. <br><br>Partner with Bunji to augment your
+                    team with added expertise and bandwidth, without having to hire more staff. We recommend and manage
+                    powerful integrated technology platforms to deliver top-notch digital marketing services and
+                    eliminate the need for you to pursue additional technology. Avoid opening the door to competitors in
+                    your accounts by leaning on us as your invisible partner, allowing you to gain flexibility while
+                    expanding your offerings to grow your agency.</p>
+            </div>
+        </div>
+        <div class="col-12 d-flex flex-column flex-md-row flex-column-reverse p-0">
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services">Tech & Tools for Optimal Growth</h2>
-                <p class="p-services">Utilizing an open-source approach, we are well-versed on current marketing platforms and are
+                <p class="p-services">Utilizing an open-source approach, we are well-versed on current marketing
+                    platforms and are
                     consistently identifying and onboarding new technology, allowing us to employ the best tools for
                     your growth strategy. We also take part in SALT Venture Partner's accelerated growth eco-system,
                     which enables us to provide special opportunities to our clients.</p>
-                <a href="#contact" data-aos="zoom-out-up" data-aos-delay="200"
-                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
-                    How</a>
             </div>
-            <div class="col-12 col-md-6 p-0"> <img src="http://5.161.71.57/imgfiles/images/Block_31.jpg"  class="w-100" alt=""></div>
+            <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Grupo 28003.jpg" alt=""></div>
         </div>
+
     </section>
-
-
-
-    <!-- Portfolio Grid -->
-    <!-- <section id="portfolio-grid" class="section-1 showcase portfolio blog-grid filter-section">
-            <div class="overflow-holder">
-                <div class="container">
-                    <div class="row text-center intro">
-                        <div class="col-12">
-                            <h2 class="mb-0">Your business objectives drive our digital marketing recommendations to boldly build your business transformation.</h2>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center text-center">
-                        <div class="col-12">
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                <label class="btn active">
-                                    <input type="radio" value="design-thinking" checked class="btn-filter-item">
-                                    <span>Design Thinking</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="branding" class="btn-filter-item">
-                                    <span>Branding</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="photography" class="btn-filter-item">
-                                    <span>Photography</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="digital-marketing" class="btn-filter-item">
-                                    <span>Digital Marketing</span>
-                                </label>
-                                <label class="btn">
-                                    <input type="radio" value="technology" class="btn-filter-item">
-                                    <span>Technology</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>                  
-                    <div class="row items filter-items">
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='[]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-7-h.jpg" class="image-over">
-                                        <img src="assets/images/news-7-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["technology"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-8-h.jpg" class="image-over">
-                                        <img src="assets/images/news-8-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["digital-marketing"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="https://www.youtube.com/watch?v=7e90gBu4pas" class="image-over">
-                                        <i class="play-video-full icon-control-play"></i>
-                                        <div class="mask-radius-full"></div>
-                                        <img src="assets/images/news-9-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["design-thinking"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-10-h.jpg" class="image-over">
-                                        <img src="assets/images/news-10-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["branding"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-11-h.jpg" class="image-over">
-                                        <img src="assets/images/news-11-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 item filter-item" data-groups='["photography"]'>
-                            <div class="row card p-0 text-center">
-                                <div class="gallery">
-                                    <a href="assets/images/news-12-h.jpg" class="image-over">
-                                        <img src="assets/images/news-12-h.jpg" alt="Lorem ipsum">
-                                    </a>
-                                </div>
-                                <div class="card-caption col-12 p-0">
-                                    <div class="card-body">
-                                        <h4 class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                                    </div>
-                                    <div class="card-footer d-lg-flex align-items-center justify-content-center">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>
-                    
-                        <div class="col-1 filter-sizer"></div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+    <!-- Specialties -->
 
 
 
@@ -411,7 +286,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-lg-9 p-0">
+                    <div class="col-12 col-md-9 p-0">
                         <div class="row">
 
                             <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
