--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
                 <h2 class="work_pp_title">Our <b>Work</b></h2>
             </div>
             <div class="row">
-                <div class="col-12 pr-lg-4">
-                    <div class="hover-option8 portfolio-wrapper grid grid-loading d-flex flex-lg-row flex-md-row flex-sm-column  ">
+                <div class="col-12 px-0">
+                    <div class="hover-option8 portfolio-wrapper grid grid-loading d-flex flex-column flex-md-row">
                         <div class=" col-sm-12 col-md-6">
-                            <div class="col-12 d-flex p-0 mb-4">
+                            <div class="col-12 d-flex flex-column flex-md-row p-0 mb-4">
                                 <!-- start portfolio item -->
-                                <div class="grid-item wow animate__fadeInUp advertising design mr-4">
+                                <div class="grid-item wow animate__fadeInUp advertising design">
                                     <a href="portfolio-alcala">
                                         <figure>
                                             <div class="portfolio-img"><img
@@ -624,7 +624,7 @@
                     </div>
                 </div>
                 <div class=" items">
-                    <div class="d-flex col-12 p-0">
+                    <div class="d-flex flex-column flex-md-row col-12 p-0">
                         <div class=" text-center item col-sm-12 col-md-12 col-lg-4  p-1">
                             <div class="flex-lg-row flex-md-row flex-sm-column">
                                 <div class="col-12">
@@ -661,7 +661,7 @@
 
         <div class="container cta-contact">
             <div class="row text-left intro">
-                <div class="col-7">
+                <div class="col-12 col-md-7">
                     <span class="title-1" style="line-height: 0.9;">Let's talk</span><br>
                     <span class="title-2" style="line-height: 0.9;">about</span> <br>
                     <span class="title-3" style="line-height: 1;">Growth!</span>
