--- a/contact.html
+++ b/contact.html
@@ -89,23 +89,23 @@
                 <!-- Navbar Items -->
                 <ul class="navbar-nav items">
                     <li class="nav-item dropdown">
-                        <a href="/" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/about.html" class="nav-link">About Us</i></a>
+                        <a href="about.html" class="nav-link">About Us</i></a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/services.html" class="nav-link">Services </a>
+                        <a href="services.html" class="nav-link">Services </a>
 
                     </li>
                     <li class="nav-item ">
-                        <a href="/specialties.html" class="nav-link">Specialties</a>
+                        <a href="specialties.html" class="nav-link">Specialties</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/portfolio.html" class="nav-link">Our work</a>
+                        <a href="portfolio.html" class="nav-link">Our work</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/contact.html" class="nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-link">Contact Us</a>
                     </li>
                 </ul>
 
