--- a/about.html
+++ b/about.html
@@ -402,7 +402,7 @@
                     </div>
                     <div class="img-team">
                     <div class="col-2 team-img-right p-0">
-                        <img src="http://5.161.71.57/imgfiles/images/Team-02.png" alt="">
+                        <img src="/assets/images/Team-02.png" alt="">
                     </div>
                     <div class="col-2 team-img-left class=" p-0">
                         <img class="p-0" src="assets/images/27.png" alt="">
@@ -425,7 +425,7 @@
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
                                 <div class="col-12">
-                                    <img src="http://5.161.71.57/files/76-7-avatar/antoine.jpg" alt="ANTOINE ZERVUDACKI"
+                                    <img src="/assets/images/antoine.jpg" alt="ANTOINE ZERVUDACKI"
                                         class="">
                                     <h4 class="my-3">Antoine Zervudacki</h4>
                                     <p class="m-0">CEO</p>
@@ -443,7 +443,7 @@
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
                                 <div class="col-12">
-                                    <img src="http://5.161.71.57/files/76-2-avatar/LILIANA.jpg" alt="LILIANA RODRIGUEZ"
+                                    <img src="/assets/images/LILIANA.jpg" alt="LILIANA RODRIGUEZ"
                                         class="">
                                     <h4 class="my-3">Liliana Rodriguez</h4>
                                     <p class="m-0">CREATIVE DIRECTOR</p>
@@ -461,7 +461,7 @@
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
                                 <div class="col-12">
-                                    <img src="http://5.161.71.57/files/76-4-avatar/ANDRES.jpg" alt="ANDRES GARZON"
+                                    <img src="/assets/images/ANDRES.jpg" alt="ANDRES GARZON"
                                         class="">
                                     <h4 class="my-3">Andres Garzon</h4>
                                     <p class="m-0">SENIOR MULTIMEDIA PRODUCER</p>
@@ -478,7 +478,7 @@
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
                                 <div class="col-12">
-                                    <img src="http://5.161.71.57/files/76-6-avatar/CRISTIAN.jpg" alt="CRISTIAN AVENDANO"
+                                    <img src="/assets/images/CRISTIAN.jpg" alt="CRISTIAN AVENDANO"
                                         class="">
                                     <h4 class="my-3">Cristian Avendaño</h4>
                                     <p class="m-0">SENIOR BRAND DIRECTOR</p>
@@ -495,7 +495,7 @@
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
                                 <div class="col-12">
-                                    <img src="http://5.161.71.57/files/76-3-avatar/FELIPE.jpg" alt="FELIPE OROZCO"
+                                    <img src="/assets/images/FELIPE.jpg" alt="FELIPE OROZCO"
                                         class="">
                                     <h4 class="my-3">Felipe Orozco</h4>
                                     <p class="m-0">LEADER OF SEO, SEM AND SOCIAL MEDIA ADS</p>
