--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@
                                     <a href="portfolio-alcala">
                                         <figure>
                                             <div class="portfolio-img"><img
-                                                    src="http://5.161.71.57/imgfiles/images/BLOCK_9.jpg" alt="" /></div>
+                                                    src="/assets/images/BLOCK_9.jpg" alt="" /></div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
                                                     <div class="portfolio-hover-box align-middle text-uppercase">
@@ -224,7 +224,7 @@
                                     <a href="portfolio-CMVC">
                                         <figure>
                                             <div class="portfolio-img"><img
-                                                    src="http://5.161.71.57/imgfiles/images/BLOCK_10.jpg" alt="" />
+                                                    src="/assets/images/BLOCK_10.jpg" alt="" />
                                             </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
@@ -247,7 +247,7 @@
                                 <a href="portfolio-academy">
                                     <figure>
                                         <div class="portfolio-img"><img
-                                                src="http://5.161.71.57/imgfiles/images/BLOCK_8.jpg" alt="" /></div>
+                                                src="/assets/images/BLOCK_8.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -272,7 +272,7 @@
                                 <a href="portfolio-kanecode">
                                     <figure>
                                         <div class="portfolio-img"><img
-                                                src="http://5.161.71.57/imgfiles/images/BLOCK_7.jpg" alt="" /></div>
+                                                src="/assets/images/BLOCK_7.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
