--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
     <section class="section-5 p-0">
         <div class="col-12 d-flex flex-column flex-md-row p-0">
             <div class="col-12 col-md-6 p-0 ">
-                <img src="http://5.161.71.57/imgfiles/images/Block_30_B.jpg" class="w-100" alt="">
+                <img src="/assets/images/Block_30_B.jpg" class="w-100" alt="">
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services">Scale With Flexibility</h2>
@@ -218,7 +218,7 @@
                     class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                     How</a>
             </div>
-            <div class="col-12 col-md-6 p-0"> <img src="http://5.161.71.57/imgfiles/images/Block_31.jpg"  class="w-100" alt=""></div>
+            <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Block_31.jpg"  class="w-100" alt=""></div>
         </div>
     </section>
 
