--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                     <a href="portfolio-alcala">
                                         <figure>
                                             <div class="portfolio-img"><img
-                                                    src="http://5.161.71.57/imgfiles/images/BLOCK_9.jpg" alt="" /></div>
+                                                    src="/assets/images/BLOCK_9.jpg" alt="" /></div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
                                                     <div class="portfolio-hover-box align-middle text-uppercase">
@@ -450,7 +450,7 @@
                                     <a href="portfolio-CMVC">
                                         <figure>
                                             <div class="portfolio-img"><img
-                                                    src="http://5.161.71.57/imgfiles/images/BLOCK_10.jpg" alt="" />
+                                                    src="/assets/images/BLOCK_10.jpg" alt="" />
                                             </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
@@ -473,7 +473,7 @@
                                 <a href="portfolio-academy">
                                     <figure>
                                         <div class="portfolio-img"><img
-                                                src="http://5.161.71.57/imgfiles/images/BLOCK_8.jpg" alt="" /></div>
+                                                src="/assets/images/BLOCK_8.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -498,7 +498,7 @@
                                 <a href="portfolio-kanecode">
                                     <figure>
                                         <div class="portfolio-img"><img
-                                                src="http://5.161.71.57/imgfiles/images/BLOCK_7.jpg" alt="" /></div>
+                                                src="/assets/images/BLOCK_7.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
