--- a/contact.html
+++ b/contact.html
@@ -147,14 +147,14 @@
     </header>
 
         <!-- Hero -->
-        <section id="slider" class="hero-contact p-0 odd">
-            <div class="swiper-container no-slider slider-h-75">
+        <section id="slider" class="hero-contact p-0 odd h-100">
+            <div class="swiper-container no-slider slider-h-65">
                 <div class="swiper-wrapper">
 
                     <!-- Item 1 -->
                     <div class="swiper-slide slide-center">
-                        <img src="assets/images/Grupo 27933.png" class="hero-image-contact-web" >
-                        <img src="assets/images/Grupo 27933r.png" class="hero-image-contact-mobile" >
+                        <img src="assets/images/Grupo 27933.png" class="hero-image-contact-web w-100 mt-5 pt-5" >
+                        <img src="assets/images/Grupo 27933r.png" class="hero-image-contact-mobile d-block d-md-none" >
                         
                     </div>
                 </div>
