--- a/test.html
+++ b/test.html
@@ -381,7 +381,7 @@
 
             $(".serv2").click(()=>{
                 SetImagenesNormales();
-                $(".serv2 img").attr("src","/assets/images/casda-hover.svg");
+                $(".serv2 img").attr("src","/assets/images/advertising2222.png");
                 $(".serv2").addClass("active");
                 $(".serv2 p").addClass("text-dark");
                 $(".serv2 p").removeClass("text-bluegrey");
